--- a/templates/objet/edit.html.twig
+++ b/templates/objet/edit.html.twig
@@ -3,11 +3,47 @@
 {% block title %}Edit Objet{% endblock %}
 
 {% block body %}
+<div id="bodyEditObjet" >
     <h1>Edit Objet</h1>
 
-    {{ include('objet/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="containerFormNewObjet">
+        {{ include('objet/_form.html.twig', {'button_label': 'Update'}) }}
+        <div id="btnDelete">{{ include('objet/_delete_form.html.twig') }}</div>
+    </div>
 
-    <a href="{{ path('objet_index') }}">back to list</a>
+    <a class="returnList" href="{{ path('objet_index') }}"><div class="fleche">←</div></a>
 
-    {{ include('objet/_delete_form.html.twig') }}
+
+</div>
+    <style>
+        #bodyEditObjet{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 70%;
+            height: 430px;
+            margin: 40px auto auto auto;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px black;
+        }
+        .containerFormNewObjet{
+            width: 40%;
+        }
+        .returnList{
+            margin-right: auto;
+            margin-left: 15px;
+            margin-bottom: 5px;
+            text-decoration: none;
+        }
+        .fleche{
+            font-size: 35px;
+        }
+        .fleche:hover{
+            zoom: 1.1;
+        }
+        #btnDelete{
+            float: right;
+            margin-top: -21px;
+        }
+    </style>
 {% endblock %}
