--- a/templates/objet/new.html.twig
+++ b/templates/objet/new.html.twig
@@ -15,6 +15,9 @@
         <a class="returnList" href="{{ path('objet_index') }}"><div class="fleche">←</div></a>
     </div>
 
+{% endblock %}
+
+{% block style %}
     <style>
         #bodyNewObjet{
             display: flex;
@@ -42,6 +45,5 @@
             zoom: 1.1;
         }
     </style>
-
 {% endblock %}
 
