--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -25,49 +25,51 @@
 {% endblock %}
 
 {% block style %}
-    .pop-up{
-    margin-top: 5px;
-    position: absolute;
-    background-color: #B0413E;
-    z-index: 10;
-    height: 600px;
-    width: 700px;
-    }
-    html{
-        background-size: cover;
-        height: 100%;
-    }
-    body{
-        justify-content: center;
-    }
-    .image {
-        max-height: 100%;
-        margin-top: 10px;
-        background-size: cover;
-        width: 600px;
-        height: 400px;
-        border-radius: 5px;
-    }
-    #description{
-        margin-top: 30px;
-        display: none;
-        flex-direction: column;
-        width: 550px;
-    }
+    <style>
+        .pop-up{
+        margin-top: 5px;
+        position: absolute;
+        background-color: #B0413E;
+        z-index: 10;
+        height: 600px;
+        width: 700px;
+        }
+        html{
+            background-size: cover;
+            height: 100%;
+        }
+        body{
+            justify-content: center;
+        }
+        .image {
+            max-height: 100%;
+            margin-top: 10px;
+            background-size: cover;
+            width: 600px;
+            height: 400px;
+            border-radius: 5px;
+        }
+        #description{
+            margin-top: 30px;
+            display: none;
+            flex-direction: column;
+            width: 550px;
+        }
 
-    #Objet{
-        margin-top: 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border-bottom : solid 3px;
-        background-color: #999696;
-        padding-left: 10px;
-        padding-right: 10px;
-        background-position: center;
-        margin-left: 28%;
-        margin-right: 28%;
-    }
+        #Objet{
+            margin-top: 50px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border-bottom : solid 3px;
+            background-color: #999696;
+            padding-left: 10px;
+            padding-right: 10px;
+            background-position: center;
+            margin-left: 28%;
+            margin-right: 28%;
+        }
+    </style>
 {% endblock %}
 
 {% block script %}
