--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,10 +26,17 @@
 </html>
 
 <style>
+    a{
+        color: #E6E7E4;
+        text-decoration: none;
+    }
     #menuBar{
         display: flex;
         height: 1%;
+        padding-bottom: 5px;
+        padding-top: 5px;
         justify-content: space-around;
+        background-color: #435B7B;
     }
 </style>
 
