--- a/templates/objet/index.html.twig
+++ b/templates/objet/index.html.twig
@@ -42,12 +42,15 @@
 {% endblock %}
 {% block style %}
     <style>
-        html{
-            background: linear-gradient(217deg, rgba(125,206,130,.8) rgba(125,206,130,0) 70.71%), linear-gradient(127deg, rgba(232,226,136,.8), rgba(232,226,136,0) 70.71%), linear-gradient(336deg, rgba(255,131,96,.8), rgba(255,131,96,0) 70.71%);
+        body{
+            background-image:url(https://media-exp1.licdn.com/dms/image/C5603AQGfLiZupUFKCg/profile-displayphoto-shrink_400_400/0/1591948837158?e=1642032000&v=beta&t=3OpzEtzdofASvCedWPyqP9lbHT7eE75K0vdzEk_fOPA);
+            background-size:cover;
         }
         th{
             text-align: left;
-            vertical-align: text-bottom;
+        }
+        td{
+            vertical-align: top;
         }
     </style>
 {% endblock %}
