Affichage de l'edit, création et show

--- a/templates/objet/new.html.twig
+++ b/templates/objet/new.html.twig
@@ -44,6 +44,9 @@
         .fleche:hover{
             zoom: 1.1;
         }
+        button:hover{
+            cursor: pointer;
+        }
     </style>
 {% endblock %}
 
