--- a/templates/objet/edit.html.twig
+++ b/templates/objet/edit.html.twig
@@ -48,5 +48,8 @@
             float: right;
             margin-top: -21px;
         }
+        button:hover{
+            cursor: pointer;
+        }
     </style>
 {% endblock %}
