--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,8 +17,8 @@
     <!--{% block popUp %}{% endblock %}-->
     <div id="menuBar">
         <a class="menu" href="/">Accueil</a>
-        <a class="menu" href="/objet/">Liste Des Objets</a>
-        <a class="menu" href="/users/">Liste Des Utilisateurs</a>
+        <a class="menu" href="/objet/">Objets</a>
+        <a class="menu" href="/users/">Utilisateurs</a>
     </div>
     <br>
         {% block body %}{% endblock %}
@@ -37,6 +37,7 @@
         padding-top: 5px;
         justify-content: space-around;
         background-color: #435B7B;
+        border: solid 3px;
     }
 </style>
 
