--- a/templates/objet/edit.html.twig
+++ b/templates/objet/edit.html.twig
@@ -19,6 +19,10 @@
 
 {% block style %}
     <style>
+        html{
+            height: 100%;
+            background: linear-gradient(to bottom, #0D1B2B, #7C90AD);
+        }
         #bodyEditObjet{
             display: flex;
             flex-direction: column;
@@ -26,8 +30,10 @@
             width: 70%;
             height: 430px;
             margin: 40px auto auto auto;
+            border-color: #435B7B;
             border-radius: 10px;
             box-shadow: 0px 0px 10px black;
+            background-color: #E6E7E4;
         }
         .containerFormNewObjet{
             width: 40%;
