--- a/templates/objet/new.html.twig
+++ b/templates/objet/new.html.twig
@@ -19,15 +19,21 @@
 
 {% block style %}
     <style>
+        html{
+            height: 100%;
+            background: linear-gradient(to bottom, #2d5e97, #7C90AD);
+        }
         #bodyNewObjet{
             display: flex;
             flex-direction: column;
             align-items: center;
             width: 70%;
-            height: 430px;
+            height: 475px;
             margin: 40px auto auto auto;
+            border-color: #435B7B;
             border-radius: 10px;
             box-shadow: 0px 0px 10px black;
+            background-color: #E6E7E4;
         }
         .containerFormNewObjet{
             width: 40%;
