--- a/templates/users/new.html.twig
+++ b/templates/users/new.html.twig
@@ -3,9 +3,52 @@
 {% block title %}New Users{% endblock %}
 
 {% block body %}
-    <h1>Create new Users</h1>
+    <div id="bodyNewObjet">
+        <h1>Create new Users</h1>
 
-    {{ include('users/_form.html.twig') }}
+        <div class="containerFormNewObjet">
+            {{ include('users/_form.html.twig') }}
+        </div>
 
-    <a href="{{ path('users_index') }}">back to list</a>
+        <a class="returnList" href="{{ path('users_index') }}"><div class="fleche">←</div></a>
+    </div>
+
+{% endblock %}
+{% block style %}
+    <style>
+        html{
+            height: 100%;
+            background: linear-gradient(to bottom, #2d5e97, #7C90AD);
+        }
+        #bodyNewObjet{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 70%;
+            height: 340px;
+            margin: 40px auto auto auto;
+            border-color: #435B7B;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px black;
+            background-color: #E6E7E4;
+        }
+        .containerFormNewObjet{
+            width: 40%;
+        }
+        .returnList{
+            margin-right: auto;
+            margin-left: 15px;
+            margin-bottom: 5px;
+            text-decoration: none;
+        }
+        .fleche{
+            font-size: 35px;
+        }
+        .fleche:hover{
+            zoom: 1.1;
+        }
+        button:hover{
+            cursor: pointer;
+        }
+    </style>
 {% endblock %}
