--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -39,3 +39,17 @@
 
     <a href="{{ path('users_new') }}">Create new</a>
 {% endblock %}
+{% block style %}
+    <style>
+        body{
+            background-image:url(https://media-exp1.licdn.com/dms/image/C5603AQGfLiZupUFKCg/profile-displayphoto-shrink_400_400/0/1591948837158?e=1642032000&v=beta&t=3OpzEtzdofASvCedWPyqP9lbHT7eE75K0vdzEk_fOPA);
+            background-size:cover;
+        }
+        th{
+            text-align: left;
+        }
+        td{
+            vertical-align: top;
+        }
+    </style>
+{% endblock %}
