--- a/templates/users/new.html.twig
+++ b/templates/users/new.html.twig
@@ -3,10 +3,10 @@
 {% block title %}New Users{% endblock %}
 
 {% block body %}
-    <div id="bodyNewObjet">
+    <div id="bodyNewUser">
         <h1>Create new Users</h1>
 
-        <div class="containerFormNewObjet">
+        <div class="containerFormNewUser">
             {{ include('users/_form.html.twig') }}
         </div>
 
@@ -20,7 +20,7 @@
             height: 100%;
             background: linear-gradient(to bottom, #2d5e97, #7C90AD);
         }
-        #bodyNewObjet{
+        #bodyNewUser{
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -32,7 +32,7 @@
             box-shadow: 0px 0px 10px black;
             background-color: #E6E7E4;
         }
-        .containerFormNewObjet{
+        .containerFormNewUser{
             width: 40%;
         }
         .returnList{
