--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -17,7 +17,7 @@
             <div id="description">
                 <p>{{ objet.Nom }}</p>
                 <p>{{ objet.Description }}</p>
-                <button onclick="window.location.reload(true)">Générer une autre image</button>
+                <button onclick="window.location.reload(true)">Générer une image</button>
             </div>
         </div>
     {% else %}
@@ -28,7 +28,8 @@
 {% block style %}
     <style>
         p{
-            color: #7C90AD;
+            color: #4d74b1;
+            font-family: Palatino, URW Palladio L, serif;
         }
         .pop-up{
         margin-top: 5px;
