--- a/templates/objet/index.html.twig
+++ b/templates/objet/index.html.twig
@@ -48,7 +48,7 @@
             color: white;
         }
         table{
-            background-color: #DDDDDD;
+            background-color: rgba(220,220,220,0.3);
             position: relative;
             width: 100%;
             height: 100%;
