--- a/templates/users/show.html.twig
+++ b/templates/users/show.html.twig
@@ -43,7 +43,10 @@
 
 {% block style %}
     <style>
-
+        html{
+            height: 100%;
+            background: linear-gradient(to bottom, #0D1B2B, #7C90AD);
+        }
         #bodyShow {
             display: flex;
             flex-direction: column;
@@ -53,6 +56,7 @@
             margin: 40px auto auto auto;
             border-radius: 10px;
             box-shadow: 0px 0px 10px black;
+            background-color: #E6E7E4;
         }
         .tdShow{
             text-align: center;
