--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -46,6 +46,7 @@
             background-size:cover;
         }
         th{
+            width: 19%;
             text-align: left;
         }
         td{
