--- a/templates/users/new.html.twig
+++ b/templates/users/new.html.twig
@@ -18,7 +18,7 @@
     <style>
         html{
             height: 100%;
-            background: linear-gradient(to bottom, #2d5e97, #7C90AD);
+            background: linear-gradient(to bottom, #0D1B2B, #7C90AD);
         }
         #bodyNewUser{
             display: flex;
