--- a/templates/objet/index.html.twig
+++ b/templates/objet/index.html.twig
@@ -55,7 +55,7 @@
             color: white;
         }
         table{
-            background-color: rgba(220,220,220,0.3);
+            background-color: rgba(255, 255, 255, 0.73);
             position: relative;
             width: 100%;
             height: 100%;
