--- a/templates/objet/index.html.twig
+++ b/templates/objet/index.html.twig
@@ -21,7 +21,7 @@
             <tr>
                 <td>{{ objet.id }}</td>
                 <td>{{ objet.Nom }}</td>
-                <td style="background-image:url({{ objet.image }}); height: 100px; width: 100px; background-size: contain; background-repeat: no-repeat;"{{ objet.Image }}</td>
+                <td class="tdimg" style="background-image:url({{ objet.image }}); height: 100px; width: 100px; background-size: contain; background-repeat: no-repeat;"{{ objet.Image }}</td>
                 <td>{{ objet.Pays }}</td>
                 <td style="word-wrap: break-word; width: 800px;">{{ objet.Description }}</td>
                 <td>
@@ -77,7 +77,7 @@
         th{
             text-align: left;
         }
-                    td:hover {
+                    .tdimg:hover {
              /* Start the shake animation and make the animation last for 0.5 seconds */
              animation: shake 0.5s;
 
@@ -86,17 +86,17 @@
                 }
 
             @keyframes shake {
-                0% { transform: translate(1px, 1px) rotate(0deg); }
-                10% { transform: translate(-1px, -2px) rotate(-1deg); }
-                20% { transform: translate(-3px, 0px) rotate(1deg); }
-                30% { transform: translate(3px, 2px) rotate(0deg); }
-                40% { transform: translate(1px, -1px) rotate(1deg); }
-                50% { transform: translate(-1px, 2px) rotate(-1deg); }
-                60% { transform: translate(-3px, 1px) rotate(0deg); }
-                70% { transform: translate(3px, 1px) rotate(-1deg); }
-                80% { transform: translate(-1px, -1px) rotate(1deg); }
-                90% { transform: translate(1px, 2px) rotate(0deg); }
-                100% { transform: translate(1px, -2px) rotate(-1deg); }
+                0% { transform: translate(10px, 10px) rotate(0deg); }
+                10% { transform: translate(-10px, -20px) rotate(-10deg); }
+                20% { transform: translate(-30px, 0px) rotate(10deg); }
+                30% { transform: translate(30px, 20px) rotate(0deg); }
+                40% { transform: translate(10px, -10px) rotate(10deg); }
+                50% { transform: translate(-10px, 20px) rotate(-10deg); }
+                60% { transform: translate(-30px, 10px) rotate(0deg); }
+                70% { transform: translate(30px, 10px) rotate(-10deg); }
+                80% { transform: translate(-10px, -10px) rotate(10deg); }
+                90% { transform: translate(10px, 20px) rotate(0deg); }
+                100% { transform: translate(10px, -20px) rotate(-10deg); }
             }
         td{
             vertical-align: top;
