--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,10 +48,14 @@
         display: flex;
         height: 1%;
         padding-bottom: 5px;
-        padding-top: 5px;
+        padding-top: 10px;
         justify-content: space-around;
         background-color: #435B7B;
         border: solid 3px;
+        margin-top: -10px;
+        margin-left: -10px;
+        margin-right: -10px;
+        opacity: 0.7;
     }
 </style>
 
