--- a/templates/objet/index.html.twig
+++ b/templates/objet/index.html.twig
@@ -69,8 +69,7 @@
             100% {left:0px; top:0px;}
         }
         body{
-            background-image:url(https://media-exp1.licdn.com/dms/image/C5603AQGfLiZupUFKCg/profile-displayphoto-shrink_400_400/0/1591948837158?e=1642032000&v=beta&t=3OpzEtzdofASvCedWPyqP9lbHT7eE75K0vdzEk_fOPA);
-            background-color: #1b283d;
+            background: linear-gradient(to bottom, #1d2d44, #d7d5d5);
             background-size:cover;
             opacity: 0.8;
         }
