--- a/templates/objet/index.html.twig
+++ b/templates/objet/index.html.twig
@@ -69,7 +69,7 @@
             100% {left:0px; top:0px;}
         }
         body{
-            background: linear-gradient(to bottom, #1d2d44, #d7d5d5);
+            background: linear-gradient(to bottom, #21304b, #ffffff);
             background-size:cover;
             opacity: 0.8;
         }
