--- a/templates/objet/index.html.twig
+++ b/templates/objet/index.html.twig
@@ -69,9 +69,8 @@
             100% {left:0px; top:0px;}
         }
         body{
-            background: linear-gradient(to bottom, #21304b, #ffffff);
+            background-image:url(https://media-exp1.licdn.com/dms/image/C5603AQGfLiZupUFKCg/profile-displayphoto-shrink_400_400/0/1591948837158?e=1642032000&v=beta&t=3OpzEtzdofASvCedWPyqP9lbHT7eE75K0vdzEk_fOPA);
             background-size:cover;
-            opacity: 0.8;
         }
         th{
             text-align: left;
