--- a/templates/secret/index.html.twig
+++ b/templates/secret/index.html.twig
@@ -1,5 +1,6 @@
 {% block body %}
-    <iframe src="https://matias.ma/nsfw" width="100%" height="100%"> </iframe>
+    <iframe src={{ site }} width="100%" height="100%"> </iframe>
+
 {% endblock %}
 
 {% block style %}
