--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -9,8 +9,8 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>First_name</th>
-                <th>Last_name</th>
+                <th>First name</th>
+                <th>Last name</th>
                 <th>Birthday</th>
                 <th>Mail</th>
                 <th>actions</th>
@@ -24,9 +24,9 @@
                 <td>{{ user.lastName }}</td>
                 <td>{{ user.birthday ? user.birthday|date('Y-m-d') : '' }}</td>
                 <td>{{ user.mail }}</td>
-                <td>
-                    <a href="{{ path('users_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('users_edit', {'id': user.id}) }}">edit</a>
+                <td class="tdbtn">
+                    <button><a href="{{ path('users_show', {'id': user.id}) }}">show</a></button>
+                    <button><a href="{{ path('users_edit', {'id': user.id}) }}">edit</a></button>
                 </td>
             </tr>
         {% else %}
@@ -37,13 +37,18 @@
         </tbody>
     </table>
 
-    <a href="{{ path('users_new') }}">Create new</a>
+    <button><a href="{{ path('users_new') }}">Create new</a></button>
 {% endblock %}
 {% block style %}
     <style>
+    h1{
+        display: flex;
+        justify-content: center;
+    }
         body{
             background-image:url(https://media-exp1.licdn.com/dms/image/C5603AQGfLiZupUFKCg/profile-displayphoto-shrink_400_400/0/1591948837158?e=1642032000&v=beta&t=3OpzEtzdofASvCedWPyqP9lbHT7eE75K0vdzEk_fOPA);
             background-size:cover;
+            text-align= center;
         }
         th{
             width: 19%;
@@ -51,6 +56,25 @@
         }
         td{
             vertical-align: top;
+        }
+        button{
+            background-color: #dfdfdf;
+            float: left;
+
+            margin: 2px;
+        }
+        button a{
+            text-decoration: none;
+            color: black;
+        }
+        .tdbtn{
+            display: flex;
+        }
+        table{
+            background-color: rgba(255, 255, 255, 0.73);
+            position: relative;
+            width: 100%;
+            height: 100%;
         }
     </style>
 {% endblock %}
